syntax = "proto3";

option csharp_namespace = "GrpcDemo.Dtos";

package business;

service Business{
	rpc Add(BusinessCreationData) returns (BusinessCreationResult){}
	rpc AddList(BusinessListCreationData) returns (BusinessCreationResult){}
	rpc GetList(QueryData) returns (BusinessListResult){}
}

message BusinessCreationData{
	string name =1;
	string address =2;
	string tel = 3;
	string email = 4;
}

message BusinessListCreationData {
	repeated BusinessCreationData BusinessesCreationData = 1;
}


message BusinessCreationResult{
	string message = 1;
}

message QueryData{
	int32 page = 1;
	int32 limit = 2;
}

message BusinessItemResult{
	string id = 1;
	string name = 2;
	string address = 3;
	string tel = 4;
	string email = 5;	
}

message BusinessListResult{
	repeated BusinessItemResult list = 1;
}


